Store dnd icon surface in a QPointer

If the drag-and-drop icon has been destroyed, return a nullptr rather
than a dangling pointer.

BUG: 428399